--- a/dev/deploy.yaml
+++ b/dev/deploy.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: app
-        image: wil42/playground:v2
+        image: wil42/playground:v1
         ports:
         - containerPort: 8888
 ---
@@ -29,3 +29,21 @@ spec:
   ports:
   - port: 8888
     targetPort: 8888
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: apps-ingress
+  annotations:
+    traefik.ingress.kubernetes.io/router.entrypoints: web
+spec:
+  rules:
+  - http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app
+            port:
+              number: 8888
