--- a/dev/deploy.yaml
+++ b/dev/deploy.yaml
@@ -2,16 +2,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
+  name: wil-app
+  labels:
+    app: wil-app
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app
+      app: wil-app
   template:
     metadata:
       labels:
-        app: app
+        app: wil-app
     spec:
       containers:
       - name: app
@@ -22,10 +24,11 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
+  name: wil-app
 spec:
+  type: NodePort
   selector:
-    app: app
+    app: wil-app
   ports:
   - port: 8888
     targetPort: 8888
@@ -44,6 +47,6 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app
+            name: wil-app
             port:
               number: 8888
