--- a/dev/deploy.yaml
+++ b/dev/deploy.yaml
@@ -16,7 +16,7 @@ spec:
         app: wil-app
     spec:
       containers:
-      - name: app
+      - name: playground
         image: wil42/playground:v1
         ports:
         - containerPort: 8888
@@ -30,8 +30,9 @@ spec:
   selector:
     app: wil-app
   ports:
-  - port: 8888
+  - port: 80
     targetPort: 8888
+    protocol: TCP
 ---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
@@ -49,4 +50,4 @@ spec:
           service:
             name: wil-app
             port:
-              number: 8888
+              number: 80
