--- a/dev/deploy.yaml
+++ b/dev/deploy.yaml
@@ -40,12 +40,14 @@ metadata:
     traefik.ingress.kubernetes.io/router.entrypoints: web
 spec:
   rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: wil-svc
-            port:
-              number: 8888
+    - host: localhost
+      http:
+        paths:
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: wil-svc
+              port:
+                number: 8888
+
